# otus_prof_web_project

./: CMakeLists.txt  README.md
.github/workflows/: release.yml
client/: CMakeLists.txt
client/src/: client.cpp  client.hpp  main.cpp
client/test/: client_tests.cpp
server/: CMakeLists.txt
server/src/: main.cpp  server.cpp  server.crt  server.hpp  server.key
server/src/www/: index.html  page4.html
server/test/: server_tests.cpp
